# ngraph-1

./: CMakeLists.txt
cmake/: external_mkldnn.cmake
python/: CMakeLists.txt  setup.py.in  tox.ini.in
src/ngraph/: CMakeLists.txt
src/ngraph/runtime/cpu/: CMakeLists.txt
